--- a/main.css
+++ b/main.css
@@ -1,3 +1,22 @@
+@charset "utf-8";
+/* 冒頭でimport */
+@import url('https://fonts.googleapis.com/css?family=Raleway:700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:400,700&display=swap&subset=japanese');
+/* フォントを指定したいところで */
+​
+.mybutton {
+  display       : inline-block;
+  border-radius : 20px;          /* 角丸       */
+  font-size     : 15pt;        /* 文字サイズ */
+  text-align    : center;      /* 文字位置   */
+  cursor        : pointer;     /* カーソル   */
+  padding       : 12px 42px;   /* 余白       */
+  background    : rgb(255,107,107);     /* 背景色     */
+  color         : #ffffff;     /* 文字色     */
+  line-height   : 1em;         /* 1行の高さ  */
+  transition    : .3s;         /* なめらか変化 */
+  border        : 2px solid rgb(255,107,107);    /* 枠の指定 */
+}
 logo img{
     display: block;
     width: 150px;
@@ -10,12 +29,13 @@ logotohome img{
     height: 50px;
     object-fit: cover; /* 画像のトリミング */
 }
-
+​
 /* トップページの一覧に関するスタイル----------------------------------------------*/
 figure {
     display: inline-block;   /* インラインブロック化 */
     margin: 0px 3px 7px 0px; /* 外側に余白を追加(※右に3px・下に7px) */
     background-color: #efefef; 
+    vertical-align: top
 }
 figure img {
     display: block;          /* 余計な余白が出ないようにする */
@@ -32,9 +52,51 @@ figcaption {
     word-wrap: break-word;
 }
 /* ---------------------------------------------------------------------------*/
-
-
-/* ========== common ========== */
+​
+​
+h1 {
+	font-size: 200%;
+	font-family: 'Raleway';
+	/*	font-family: 'M PLUS Rounded 1c',*/
+}
+​
+h2,h3,h4{
+	font-family: 'Raleway';
+​
+}
+​
+​
+h2.underline {
+    text-decoration:underline;
+    text-decoration-color:rgb(255,107,107);
+    text-decoration-thickness: 2px;
+}
+h3.underline {
+    text-decoration:underline;
+    text-decoration-color:rgb(255,107,107);
+    text-decoration-thickness: 2px;
+}
+h4.underline {
+    text-decoration:underline;
+    text-decoration-color:rgb(255,107,107);
+    text-decoration-thickness: 2px;
+}
+​
+h2.mplus{
+	font-size: 150%;
+	font-family: 'M PLUS Rounded 1c';
+}
+/*
+div.h2{
+	margin-left: 50px;
+}
+div.h3{
+	margin-left: 70px;
+}
+div.h4{
+	margin-left: 80px;
+}
+*/
 html, body {
 	font-size: 16px;
 	font-family: sans-serif;
@@ -43,22 +105,27 @@ html, body {
     margin-bottom: 40px;
 	background: #efefef;
 }
+/*
 h1{
     text-indent: 0em;
 }
 h2{
-    margin-left: 2em;
-    margin-top: 2em;
+​
 }
 h3{
     margin-left: 3em;
 }
-p,div{
-    margin-left: 5em;
+*/
+p,ul,ol{
+    margin-left: 1em;
+}
+div{
+    margin-left: 2em;
+    margin-top: 0em;
+    margin-bottom: 0em;
 }
 span.blackback{
     text-indent: 4em;
     background: #393939;
     color: #efefef;
 }
-
